# Galatiq-Demo

./: .env.example  .gitignore  main.py  pyproject.toml
dashboard/: app.py
data/edge_cases/: edge_alias_vendor.json  edge_blocked_vendor.json  edge_cfo_tier_eur.json  edge_currency_drift.json  edge_discontinued_sku.json  edge_new_vendor.json  edge_phantom_fraud.json  edge_round_number_padding.json  edge_typosquat_vendor.json
data/receipts/: PAY-VEND-001-INV-CLEAN-001-ACH.txt
scripts/: build_cheatsheet.py  fetch_dataset.py  sweep_corpus.py
src/galatiq/: fx.py
src/galatiq/agents/: _llm_helpers.py  _walkthrough.py  approval.py  critic.py  fraud_screener.py  ingestion.py  investigator.py  justifier.py  payment.py  payment_guards.py  pipeline.py  pre_approval_screener.py  tools.py  validation.py  vendor_onboarding.py
src/galatiq/agents/reviewers/: __init__.py  aggregator.py  compliance.py  fraud.py  (+3 more)
src/galatiq/cli/: app.py
src/galatiq/db/: __init__.py  inventory.py
src/galatiq/io/: pdf.py  readers.py  sanitize.py
src/galatiq/llm/: client.py  structured.py
src/galatiq/models/: __init__.py  invoice.py
src/galatiq/payments/: __init__.py  receipt.py
tests/unit/: test_approval_agent.py  test_council.py  test_critic.py  test_edge_cases.py  test_fx.py  test_hitl.py  test_inventory_db.py  test_invoice_model.py  test_llm_specialists.py  test_payment_agent.py  test_payment_guards.py  test_pipeline_graph.py  test_pipeline_multiagent.py  test_pre_approval_screener.py  test_readers_deterministic.py  test_sanitize.py  test_validation_agent.py  test_walkthrough.py
