[project]
name = "galatiq"
version = "0.1.0"
description = "Multi-agent invoice processing automation for Acme Corp"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-xai>=0.2",
    "langchain-openai>=0.2",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galatiq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
